Saving before I make edits to try and fix a spacing issue

--- a/css/index.css
+++ b/css/index.css
@@ -272,8 +272,9 @@ ul {
 /* tablet - for 800 and below do this */
 @media (max-width: 800px) {
     .container {
-        background: red;
         width: 800px;
+        margin: 0 auto;
+        background: red;
     }
     .circle-logo {
         display: none;
@@ -282,6 +283,10 @@ ul {
         display: flex;
         flex-direction: column-reverse;
         text-align: center;
+        text-decoration: none;
+    }
+    .second-row {
+        margin-top: -10%;
     }
     .logo {
         width: 20%;
@@ -289,9 +294,11 @@ ul {
     }
     .logo-header {
         margin: 0% 0% 25% 20%;
+    
     }
     .innovation-header {
         margin-left: 20%;
+        margin-right: 0px;
     }
     .third-row {
         border-top: 2px solid black;
@@ -311,8 +318,9 @@ ul {
 /* tablet - for 500 and below do this */
 @media (max-width: 500px) {
     .container {
+        max-width: 500px;
+        margin: 0 auto;
         background: blue;
-        width: 500px;
     }
     .first-row nav a {
         display: flex;
@@ -326,6 +334,15 @@ ul {
         /* border-bottom: 1px solid grey; */
         /* cannot get border under Great Idea to go against screen */
         display: flex;
+    }
+    .second-row {
+        margin-top: -20%;
+    }
+    .started {
+        margin-right: 20%;
+    }
+    .third-row {
+        margin-top: 40%;
     }
  
     
